replace get(0) calls with getFirst